--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 	"content_scripts": [
 	  {
 			"matches":["https://www.linkedin.com/*", "https://nerdwallet.greenhouse.io/*"],
-			"js":["add_to_gh.js", "keypress.js", "jquery.js", "linkedinjsv2.js"],
+			"js":["keypress.js", "jquery.js", "linkedinjsv2.js"],
 			"run_at": "document_end"
 		}
 	]
