--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
 	
 	"content_scripts": [
 	  {
-			"matches":["https://www.linkedin.com/*", "https://nerdwallet.greenhouse.io/*"],
+			"matches":["https://www.linkedin.com/*"],
 			"js":["keypress.js", "jquery.js", "linkedinjsv2.js"],
 			"run_at": "document_end"
 		}
