--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
-  "description": "This extension shows a Google Image search result for the current page",
+  "name": "Linkedin Inmailer",
+  "description": "Chrome Extension for sending Linkedin Inmails",
   "version": "1.0",
 
   "browser_action": {
